--- a/src/com/app/form/backup.form
+++ b/src/com/app/form/backup.form
@@ -421,6 +421,7 @@
                         </Property>
                       </Properties>
                       <Events>
+                        <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="cboBDBackupItemStateChanged"/>
                         <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="cboBDBackupKeyPressed"/>
                       </Events>
                     </Component>
